UP-1210: Fixed the problem with too long inputs into verification search bar: * define/reduce the maximum height of the area in which the inserted hash is displayed (will be scrolled on overflow) * start verify request when user presses Enter (added additional setting to header)

--- a/src/global.scss
+++ b/src/global.scss
@@ -40,6 +40,11 @@ ion-header ion-toolbar:first-child {
   padding-top: 50px;
 }
 
+.max-content-height {
+  max-height: 100px;
+  overflow: auto;
+}
+
 .config-area textarea.native-textarea.sc-ion-textarea-md {
   min-height: 150px;
   border: solid 1px lightgrey;
